--- a/TopQuarkAnalysis/SingleTop/test/crab.cfg
+++ b/TopQuarkAnalysis/SingleTop/test/crab.cfg
@@ -5,9 +5,9 @@
 
 #JSON_132440_140040.txt
 #lumi_mask = JSON_140041_143962.txt
-#lumi_mask = Cert_132440-999999_7TeV_StreamExpress_Collisions11_JSON.txt
-#total_number_of_lumis = -1
-#lumis_per_job = 15
+lumi_mask = Cert_132440-999999_7TeV_StreamExpress_Collisions11_JSON.txt
+total_number_of_lumis = -1
+lumis_per_job = 15
 
 #Spring10 @ 7TeV:
 #datasetpath = /MinimumBias/Commissioning10-SD_Mu-v9/RECO
@@ -15,7 +15,7 @@
 
 #2011 Data
 #datasetpath = /SingleMu/Run2011A-PromptReco-v1/AOD
-#datasetpath = /SingleElectron/Run2011A-PromptReco-v1/AOD
+datasetpath = /SingleElectron/Run2011A-PromptReco-v1/AOD
 
 #Old2010
 #datasetpath = /Mu/Run2010A-Sep17ReReco_v2/RECO
@@ -46,7 +46,7 @@
 #datasetpath = /TToBLNu_TuneZ2_tW-channel_7TeV-madgraph/Spring11-PU_S1_START311_V1G1-v1/AODSIM
 
 #Old Single Top
-datasetpath = /TToBLNu_TuneZ2_t-channel_7TeV-madgraph/Fall10-START38_V12-v2/AODSIM
+#datasetpath = /TToBLNu_TuneZ2_t-channel_7TeV-madgraph/Fall10-START38_V12-v2/AODSIM
 
 
 #Z VV
@@ -74,6 +74,7 @@ datasetpath = /TToBLNu_TuneZ2_t-channel_7TeV-madgraph/Fall10-START38_V12-v2/AODS
 #datasetpath = /WJetsToLNu_TuneD6T_7TeV-madgraph-tauola/Fall10-E7TeV_ProbDist_2010Data_BX156_START38_V12-v1/AODSIM
 
 #W+HF
+#datasetpath = /VQQJetsToLL_TuneD6T_7TeV-madgraph-tauola/Spring11-PU_S1_START311_V1G1-v1/AODSIM 
 #datasetpath = /WCJetsToLNu_TuneD6T_7TeV-madgraph-tauola/Fall10-START38_V12-v1/AODSIM
 #datasetpath = /VQQJetsToLL_TuneD6T_7TeV-madgraph-tauola/Fall10-START38_V12-v2/AODSIM
 
@@ -113,37 +114,22 @@ datasetpath = /TToBLNu_TuneZ2_t-channel_7TeV-madgraph/Fall10-START38_V12-v2/AODS
 #pset = copy.py
 #pset = copyAll.py
 
-pset = SingleTopMC_PF2PAT_cfg.py
+#pset = SingleTopMC_PF2PAT_cfg.py
 #pset = SingleTopData_VanillaPF_cfg.py
 #pset = SingleTopData_PF2PAT_cfg.py
+pset = SingleTopData_PF2PAT_New_cfg.py
+#pset = SingleTopMC_PF2PAT_New_cfg.py
 #pset = SingleTopMCForCrab.py
 
-total_number_of_events= -1
+#total_number_of_events= -1
 #total_number_of_events = 1000
 #35800 
 #total_number_of_events
 #events_per_job = 1000
-events_per_job = 50000
+#events_per_job = 80000
 
-output_file = QCDSampleEleTChannelOld.root,TSampleEleTChannelOld.root, QCDSampleMuTChannelOld.root,TSampleMuTChannelOld.root
 
-#output_file = QCDSampleMuData_PF2PAT.root,TSampleMuData_PF2PAT.root
-#output_file = QCDSampleEleData_PF2PAT.root,TSampleEleData_PF2PAT.root
-#output_file = WJetsNewFile.root
-
-#output_file = QCDSampleEleQCDMu.root,TSampleEleQCDMu.root,TSampleMuQCDMu.root,QCDSampleMuQCDMu.root
-
-#output_file = TSampleMuQCDMu.root,QCDSampleMuQCDMu.root
-#output_file = TSampleEleWJets.root,QCDSampleEleWJets.root
-
-#output_file = QCDMuFile.root
-
-#output_file = QCDSampleEleWJets_Tauola.root
-
-#output_file = DataQCDChanSampleMu_132440_144114.root
-#output_file = DataTChanSampleMu_132440_144114.root,DataQCDChanSampleMu_132440_144114.root
-
-#output_file = TSampleMuData.root
+output_file = edmntuple_Data.root
 
 #use_parent = 1
 
@@ -151,7 +137,7 @@ output_file = QCDSampleEleTChannelOld.root,TSampleEleTChannelOld.root, QCDSample
 copy_data = 1
 #ui_working_dir = QCDEMEnriched_Pt_80_170Ele
 #ui_working_dir = DataEle_132440_140040
-ui_working_dir = TTChannelOld
+ui_working_dir = _DataEle
 #ui_working_dir = DataEle_160433_161312_PF2PAT
 
 
@@ -163,10 +149,11 @@ storage_path = /srm/managerv2?SFN=/castor/cern.ch
 #user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/DataPF2PAT/Mu
 #user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/DataPF2PAT/Ele
 #user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/Data/Mu_B
+user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/NewPatTuples/Ele
 #user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/Data/Ele_B
 #user_remote_dir = user/o/oiorio/SingleTop/2011/MC2011/TChannel
 #user_remote_dir = user/o/oiorio/SingleTop/2011/MC2011/TTBarOld
-user_remote_dir = user/o/oiorio/SingleTop/2011/MC2011/TChannelOld
+#user_remote_dir = user/o/oiorio/SingleTop/2011/MC2011/TChannelOld
 
 #user_remote_dir = user/o/oiorio/SingleTop/SingleTop_tChan/Ntuples
 #user_remote_dir = user/o/oiorio/SingleTop/TTBar/Ntuples
@@ -199,7 +186,7 @@ user_remote_dir = user/o/oiorio/SingleTop/2011/MC2011/TChannelOld
 #se_white_list = T2_FR_CCIN2P3 
 #se_white_list = T2_US_Florida
 #se_white_list = T2_DE_DESY
-se_black_list =  T2_TW_Taiwan
+se_black_list =  T2_TW_Taiwan,T2_US_Florida, T2_US_Nebraska
 # T2_IN_TIFR
 #se_black_list = T2_CH_CSCS, T2_CN_Beijing, T2_FR_CCIN2P3, T2_AT_Vienna
 
