Add new triggers for 1e33 data taking

--- a/ElectroWeakAnalysis/MultiBosons/test/Skimming/makeVGammaSkim_multicrab.cfg
+++ b/ElectroWeakAnalysis/MultiBosons/test/Skimming/makeVGammaSkim_multicrab.cfg
@@ -3,7 +3,7 @@ cfg = makeVGammaSkim_crab.cfg
 
 [COMMON]
 CRAB.jobtype=cmssw
-CRAB.scheduler=glite
+CRAB.scheduler=glidein
 #CRAB.scheduler=condor ## for running at FNAL
 CRAB.use_server=1
 
@@ -11,88 +11,90 @@ CMSSW.get_edm_output=1
 
 USER.return_data = 0
 USER.copy_data = 1
-USER.storage_element=srm-cms.cern.ch
-USER.storage_path=/srm/managerv2?SFN=/castor/cern.ch/user/v/veverka
-USER.user_remote_dir=VGammaSkims_v3/MuonPhotonSkim
+USER.storage_element=T2_US_Wisconsin
+#USER.storage_path=/srm/managerv2?SFN=/castor/cern.ch/user/v/veverka
+#USER.user_remote_dir=VGammaSkims_v3/MuonPhotonSkim
 
 ## stuff for publishing the skims turn publish_data to 1 if you want to do this
 ## it will override user_remote_dir and such
-USER.publish_data=0
-USER.dbs_url_for_publication=https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_01_writer/servlet/DBSServlet
-USER.publish_data_name=Skim
+USER.publish_data=1
+USER.publish_zero_event=1
+USER.check_user_remote_dir=0
+USER.dbs_url_for_publication=https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+#USER.publish_data_name=Skim
 
-[SDJun14thReReco] ## Runs 132440-135114
-CMSSW.datasetpath=/MinimumBias/Commissioning10-SD_Mu-Jun14thSkim_v1/RECO
-CMSSW.pycfg_params=jobType=MUPHReReco36X
-CMSSW.lumis_per_job=900
-CMSSW.total_number_of_lumis=-1
-# USER.user_remote_dir=data/36X/
-USER.publish_data_name=SDJun14thReReco
+#[MuRun2010A] 
+#CMSSW.datasetpath=/Mu/Run2010A-Apr21ReReco-v1/RECO
+#CMSSW.pycfg_params=jobType=MUPHReReco414
+#CMSSW.lumis_per_job=300
+#CMSSW.total_number_of_lumis=-1
+#USER.user_remote_dir=data/414/
+#USER.publish_data_name=Run2010A
 
-[Jun14thReReco] ## Runs 135821-137731
-CMSSW.datasetpath=/Mu/Run2010A-Jun14thReReco_v1/RECO
-CMSSW.pycfg_params=jobType=MUPHReReco36X
-CMSSW.lumis_per_job=300
-CMSSW.total_number_of_lumis=-1
-# USER.user_remote_dir=data/36X/
-USER.publish_data_name=Jun14thReReco
+#[MuRun2010B] 
+#CMSSW.datasetpath=/Mu/Run2010B-Apr21ReReco-v1/RECO
+#CMSSW.pycfg_params=jobType=MUPHReReco414
+#CMSSW.lumis_per_job=300
+#CMSSW.total_number_of_lumis=-1
+#USER.user_remote_dir=data/414/
+#USER.publish_data_name=Run2010B
 
-[Jul16thReReco] ## 139779-140159
-CMSSW.datasetpath = /Mu/Run2010A-Jul16thReReco-v1/RECO
-CMSSW.pycfg_params=jobType=MUPHReReco36X
-CMSSW.lumis_per_job=300
-CMSSW.total_number_of_lumis=-1
-# USER.user_remote_dir=data/36X/
-USER.publish_data_name=Jul16thReReco
-
-[PromptRecov4] ## 137436 and onwards....
-CMSSW.datasetpath = /Mu/Run2010A-PromptReco-v4/RECO
-CMSSW.pycfg_params=jobType=MUPHReReco36X
+[SingleMuRun2011Av1] 
+CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v1/RECO
+CMSSW.pycfg_params=jobType=MUPHPromptReco414
 CMSSW.lumis_per_job=100
 CMSSW.total_number_of_lumis=-1
-# USER.user_remote_dir=data/36X
-USER.publish_data_name=PromptRecov4
+# USER.user_remote_dir=data/414/
+USER.publish_data_name=Run2011Av1
+
+[SingleMuRun2011Av2] 
+CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v2/RECO
+CMSSW.pycfg_params=jobType=MUPHReReco414
+CMSSW.lumis_per_job=100
+CMSSW.total_number_of_lumis=-1
+# USER.user_remote_dir=data/414
+USER.publish_data_name=Run2011Av2
 
 ## MC Samples (below are 2010 production, mostly summer)
-[Zgamma]
-CMSSW.datasetpath=/Zgamma/Spring10-START3X_V26_S09-v1/GEN-SIM-RECO
-CMSSW.pycfg_params=jobType=MUPHMC36XSpring10
-CMSSW.total_number_of_events=-1
-CMSSW.number_of_jobs=25
-# USER.user_remote_dir=mc/Spring10/
-USER.publish_data_name=
+#[Zgamma]
+#CMSSW.datasetpath=/Zgamma/Spring10-START3X_V26_S09-v1/GEN-SIM-RECO
+#CMSSW.pycfg_params=jobType=MUPHMC36XSpring10
+#CMSSW.total_number_of_events=-1
+#CMSSW.number_of_jobs=25
+#USER.user_remote_dir=mc/Spring10/
+#USER.publish_data_name=
 
-[ZJets-madgraph]
-CMSSW.datasetpath=/ZJets_7TeV-madgraph-tauola/Summer10-START36_V9_S09-v2/GEN-SIM-RECO
-CMSSW.pycfg_params=jobType=MUPHMC36XSummer10
-CMSSW.total_number_of_events=-1
-CMSSW.number_of_jobs=25
-# USER.user_remote_dir=mc/Summer10/
-USER.publish_data_name=
+#[ZJets-madgraph]
+#CMSSW.datasetpath=/ZJets_7TeV-madgraph-tauola/Summer10-START36_V9_S09-v2/GEN-SIM-RECO
+#CMSSW.pycfg_params=jobType=MUPHMC36XSummer10
+#CMSSW.total_number_of_events=-1
+#CMSSW.number_of_jobs=25
+#USER.user_remote_dir=mc/Summer10/
+#USER.publish_data_name=
 
-[InclusiveMu15]
-CMSSW.datasetpath=/InclusiveMu15/Summer10-START36_V9_S09-v1/GEN-SIM-RECO
-CMSSW.pycfg_params=jobType=MUPHMC36XSummer10
-CMSSW.total_number_of_events=-1
-CMSSW.number_of_jobs=100
-# USER.user_remote_dir=mc/Summer10/
-USER.publish_data_name=
+#[InclusiveMu15]
+#CMSSW.datasetpath=/InclusiveMu15/Summer10-START36_V9_S09-v1/GEN-SIM-RECO
+#CMSSW.pycfg_params=jobType=MUPHMC36XSummer10
+#CMSSW.total_number_of_events=-1
+#CMSSW.number_of_jobs=100
+#USER.user_remote_dir=mc/Summer10/
+#USER.publish_data_name=
 
-[WJets-madgraph]
-CMSSW.datasetpath=/WJets_7TeV-madgraph-tauola/Summer10-START36_V9_S09-v1/GEN-SIM-RECO
-CMSSW.pycfg_params=jobType=MUPHMC36XSummer10
-CMSSW.total_number_of_events=-1
-CMSSW.number_of_jobs=100
-# USER.user_remote_dir=mc/Summer10/
-USER.publish_data_name=
+#[WJets-madgraph]
+#CMSSW.datasetpath=/WJets_7TeV-madgraph-tauola/Summer10-START36_V9_S09-v1/GEN-SIM-RECO
+#CMSSW.pycfg_params=jobType=MUPHMC36XSummer10
+#CMSSW.total_number_of_events=-1
+#CMSSW.number_of_jobs=100
+#USER.user_remote_dir=mc/Summer10/
+#USER.publish_data_name=
 
-[TTbarJets-madgraph]
-CMSSW.datasetpath=/TTbarJets_Tauola-madgraph/Summer10-START36_V9_S09-v1/GEN-SIM-RECO
-CMSSW.pycfg_params=jobType=MUPHMC36XSummer10
-CMSSW.total_number_of_events=-1
-CMSSW.number_of_jobs=100
-# USER.user_remote_dir=mc/Summer10/
-USER.publish_data_name=
+#[TTbarJets-madgraph]
+#CMSSW.datasetpath=/TTbarJets_Tauola-madgraph/Summer10-START36_V9_S09-v1/GEN-SIM-RECO
+#CMSSW.pycfg_params=jobType=MUPHMC36XSummer10
+#CMSSW.total_number_of_events=-1
+#CMSSW.number_of_jobs=100
+#USER.user_remote_dir=mc/Summer10/
+#USER.publish_data_name=
 
 # [Zee]
 # CMSSW.datasetpath = /Zee/Spring10-START3X_V26_S09-v1/GEN-SIM-RECO
