Fix to global tags since PR GTs don't have some needed info

--- a/ElectroWeakAnalysis/MultiBosons/test/Skimming/makeVGammaSkim_multicrab.cfg
+++ b/ElectroWeakAnalysis/MultiBosons/test/Skimming/makeVGammaSkim_multicrab.cfg
@@ -23,33 +23,33 @@ USER.check_user_remote_dir=0
 USER.dbs_url_for_publication=https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
 #USER.publish_data_name=Skim
 
-#[MuRun2010A] 
-#CMSSW.datasetpath=/Mu/Run2010A-Apr21ReReco-v1/RECO
-#CMSSW.pycfg_params=jobType=MUPHReReco414
-#CMSSW.lumis_per_job=300
-#CMSSW.total_number_of_lumis=-1
+[MuRun2010A-unmerged] 
+CMSSW.datasetpath=/Mu/Run2010A-Apr21ReReco-v1/AOD
+CMSSW.pycfg_params=jobType=MUPHReReco414
+CMSSW.lumis_per_job=300
+CMSSW.total_number_of_lumis=-1
 #USER.user_remote_dir=data/414/
-#USER.publish_data_name=Run2010A
+USER.publish_data_name=Run2010A
 
-#[MuRun2010B] 
-#CMSSW.datasetpath=/Mu/Run2010B-Apr21ReReco-v1/RECO
-#CMSSW.pycfg_params=jobType=MUPHReReco414
-#CMSSW.lumis_per_job=300
-#CMSSW.total_number_of_lumis=-1
+[MuRun2010B-unmerged] 
+CMSSW.datasetpath=/Mu/Run2010B-Apr21ReReco-v1/AOD
+CMSSW.pycfg_params=jobType=MUPHReReco414
+CMSSW.lumis_per_job=300
+CMSSW.total_number_of_lumis=-1
 #USER.user_remote_dir=data/414/
-#USER.publish_data_name=Run2010B
+USER.publish_data_name=Run2010B
 
-[SingleMuRun2011Av1] 
-CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v1/RECO
+[SingleMuRun2011Av1-unmerged] 
+CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v1/AOD
 CMSSW.pycfg_params=jobType=MUPHPromptReco414
 CMSSW.lumis_per_job=100
 CMSSW.total_number_of_lumis=-1
 # USER.user_remote_dir=data/414/
 USER.publish_data_name=Run2011Av1
 
-[SingleMuRun2011Av2] 
-CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v2/RECO
-CMSSW.pycfg_params=jobType=MUPHReReco414
+[SingleMuRun2011Av2-unmerged] 
+CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v2/AOD
+CMSSW.pycfg_params=jobType=MUPHPromptReco414
 CMSSW.lumis_per_job=100
 CMSSW.total_number_of_lumis=-1
 # USER.user_remote_dir=data/414
