Updates for latest data

--- a/ElectroWeakAnalysis/MultiBosons/test/Skimming/makeVGammaSkim_multicrab.cfg
+++ b/ElectroWeakAnalysis/MultiBosons/test/Skimming/makeVGammaSkim_multicrab.cfg
@@ -3,15 +3,16 @@ cfg = makeVGammaSkim_crab.cfg
 
 [COMMON]
 CRAB.jobtype=cmssw
-CRAB.scheduler=glidein
+CRAB.scheduler=condor_g
 #CRAB.scheduler=condor ## for running at FNAL
-CRAB.use_server=1
+#CRAB.use_server=1
 
 CMSSW.get_edm_output=1
 
 USER.return_data = 0
 USER.copy_data = 1
 USER.storage_element=T2_US_Wisconsin
+GRID.se_white_list=T2_US_Wisconsin
 #USER.storage_path=/srm/managerv2?SFN=/castor/cern.ch/user/v/veverka
 #USER.user_remote_dir=VGammaSkims_v3/MuonPhotonSkim
 
@@ -23,21 +24,37 @@ USER.check_user_remote_dir=0
 USER.dbs_url_for_publication=https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
 #USER.publish_data_name=Skim
 
-[MuRun2010A-unmerged] 
+[MuRun2010A-RRApr21-unmerged] 
 CMSSW.datasetpath=/Mu/Run2010A-Apr21ReReco-v1/AOD
 CMSSW.pycfg_params=jobType=MUPHReReco414
 CMSSW.lumis_per_job=300
 CMSSW.total_number_of_lumis=-1
 #USER.user_remote_dir=data/414/
-USER.publish_data_name=Run2010A
+USER.publish_data_name=Run2010A-RRApr21
 
-[MuRun2010B-unmerged] 
+[MuRun2010B-RRApr21-unmerged] 
 CMSSW.datasetpath=/Mu/Run2010B-Apr21ReReco-v1/AOD
 CMSSW.pycfg_params=jobType=MUPHReReco414
 CMSSW.lumis_per_job=300
 CMSSW.total_number_of_lumis=-1
 #USER.user_remote_dir=data/414/
-USER.publish_data_name=Run2010B
+USER.publish_data_name=Run2010B-RRApr21
+
+[MuRun2010A-RRDec22-unmerged]
+CMSSW.datasetpath=/Mu/Run2010A-Dec22ReReco_v1/AOD
+CMSSW.pycfg_params=jobType=MUPHReReco414
+CMSSW.lumis_per_job=300
+CMSSW.total_number_of_lumis=-1
+#USER.user_remote_dir=data/414/
+USER.publish_data_name=Run2010A-RRDec22
+
+[MuRun2010B-RRDec22-unmerged]
+CMSSW.datasetpath=/Mu/Run2010B-Dec22ReReco_v1/AOD
+CMSSW.pycfg_params=jobType=MUPHReReco414
+CMSSW.lumis_per_job=300
+CMSSW.total_number_of_lumis=-1
+#USER.user_remote_dir=data/414/
+USER.publish_data_name=Run2010B-RRDec22
 
 [SingleMuRun2011Av1-unmerged] 
 CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v1/AOD
