--- a/ElectroWeakAnalysis/MultiBosons/test/Skimming/makeVGammaSkim_multicrab.cfg
+++ b/ElectroWeakAnalysis/MultiBosons/test/Skimming/makeVGammaSkim_multicrab.cfg
@@ -26,51 +26,51 @@ USER.dbs_url_for_publication=https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis
 
 [MuRun2010A-RRApr21-unmerged] 
 CMSSW.datasetpath=/Mu/Run2010A-Apr21ReReco-v1/AOD
-CMSSW.pycfg_params=jobType=MUPHReReco414
+CMSSW.pycfg_params=jobType=MUPHData42X
 CMSSW.lumis_per_job=300
 CMSSW.total_number_of_lumis=-1
 #USER.user_remote_dir=data/414/
 USER.publish_data_name=Run2010A-RRApr21
 
-[MuRun2010B-RRApr21-unmerged] 
-CMSSW.datasetpath=/Mu/Run2010B-Apr21ReReco-v1/AOD
-CMSSW.pycfg_params=jobType=MUPHReReco414
-CMSSW.lumis_per_job=300
-CMSSW.total_number_of_lumis=-1
-#USER.user_remote_dir=data/414/
-USER.publish_data_name=Run2010B-RRApr21
+#[MuRun2010B-RRApr21-unmerged] 
+#CMSSW.datasetpath=/Mu/Run2010B-Apr21ReReco-v1/AOD
+#CMSSW.pycfg_params=jobType=MUPHReReco414
+#CMSSW.lumis_per_job=300
+#CMSSW.total_number_of_lumis=-1
+##USER.user_remote_dir=data/414/
+#USER.publish_data_name=Run2010B-RRApr21
 
-[MuRun2010A-RRDec22-unmerged]
-CMSSW.datasetpath=/Mu/Run2010A-Dec22ReReco_v1/AOD
-CMSSW.pycfg_params=jobType=MUPHReReco414
-CMSSW.lumis_per_job=300
-CMSSW.total_number_of_lumis=-1
-#USER.user_remote_dir=data/414/
-USER.publish_data_name=Run2010A-RRDec22
+#[MuRun2010A-RRDec22-unmerged]
+#CMSSW.datasetpath=/Mu/Run2010A-Dec22ReReco_v1/AOD
+#CMSSW.pycfg_params=jobType=MUPHReReco414
+#CMSSW.lumis_per_job=300
+#CMSSW.total_number_of_lumis=-1
+##USER.user_remote_dir=data/414/
+#USER.publish_data_name=Run2010A-RRDec22
 
-[MuRun2010B-RRDec22-unmerged]
-CMSSW.datasetpath=/Mu/Run2010B-Dec22ReReco_v1/AOD
-CMSSW.pycfg_params=jobType=MUPHReReco414
-CMSSW.lumis_per_job=300
-CMSSW.total_number_of_lumis=-1
-#USER.user_remote_dir=data/414/
-USER.publish_data_name=Run2010B-RRDec22
+#[MuRun2010B-RRDec22-unmerged]
+#CMSSW.datasetpath=/Mu/Run2010B-Dec22ReReco_v1/AOD
+#CMSSW.pycfg_params=jobType=MUPHReReco414
+#CMSSW.lumis_per_job=300
+#CMSSW.total_number_of_lumis=-1
+##USER.user_remote_dir=data/414/
+#USER.publish_data_name=Run2010B-RRDec22
 
-[SingleMuRun2011Av1-unmerged] 
-CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v1/AOD
-CMSSW.pycfg_params=jobType=MUPHPromptReco414
-CMSSW.lumis_per_job=100
-CMSSW.total_number_of_lumis=-1
+#[SingleMuRun2011Av1-unmerged] 
+#CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v1/AOD
+#CMSSW.pycfg_params=jobType=MUPHPromptReco414
+#CMSSW.lumis_per_job=100
+#CMSSW.total_number_of_lumis=-1
 # USER.user_remote_dir=data/414/
-USER.publish_data_name=Run2011Av1
+#USER.publish_data_name=Run2011Av1
 
-[SingleMuRun2011Av2-unmerged] 
-CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v2/AOD
-CMSSW.pycfg_params=jobType=MUPHPromptReco414
-CMSSW.lumis_per_job=100
-CMSSW.total_number_of_lumis=-1
+#[SingleMuRun2011Av2-unmerged] 
+#CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v2/AOD
+#CMSSW.pycfg_params=jobType=MUPHPromptReco414
+##CMSSW.lumis_per_job=100
+#CMSSW.total_number_of_lumis=-1
 # USER.user_remote_dir=data/414
-USER.publish_data_name=Run2011Av2
+#USER.publish_data_name=Run2011Av2
 
 ## MC Samples (below are 2010 production, mostly summer)
 #[Zgamma]
