--- a/TopQuarkAnalysis/SingleTop/test/crab.cfg
+++ b/TopQuarkAnalysis/SingleTop/test/crab.cfg
@@ -5,16 +5,16 @@
 
 #JSON_132440_140040.txt
 #lumi_mask = JSON_140041_143962.txt
-lumi_mask = Cert_132440-999999_7TeV_StreamExpress_Collisions11_JSON.txt
+lumi_mask =Cert_160404-163757_7TeV_PromptReco_Collisions11_JSON.txt
 total_number_of_lumis = -1
-lumis_per_job = 15
+lumis_per_job = 30
 
 #Spring10 @ 7TeV:
 #datasetpath = /MinimumBias/Commissioning10-SD_Mu-v9/RECO
 #datasetpath = /MinimumBias/Commissioning10-SD_EG-v9/RECO
 
 #2011 Data
-#datasetpath = /SingleMu/Run2011A-PromptReco-v1/AOD
+#datasetpath = /SingleMu/Run2011A-PromptReco-v2/AOD
 datasetpath = /SingleElectron/Run2011A-PromptReco-v1/AOD
 
 #Old2010
@@ -76,9 +76,11 @@ datasetpath = /SingleElectron/Run2011A-PromptReco-v1/AOD
 #W+HF
 #datasetpath = /VQQJetsToLL_TuneD6T_7TeV-madgraph-tauola/Spring11-PU_S1_START311_V1G1-v1/AODSIM 
 #datasetpath = /WCJetsToLNu_TuneD6T_7TeV-madgraph-tauola/Fall10-START38_V12-v1/AODSIM
+
+#datasetpath = /WCJetsToLNu_TuneD6T_7TeV-madgraph-tauola/Spring11-PU_S1_START311_V1G1-v1/AODSIM
 #datasetpath = /VQQJetsToLL_TuneD6T_7TeV-madgraph-tauola/Fall10-START38_V12-v2/AODSIM
 
-
+#Other 
 #datasetpath = /TTJets_TuneD6T_smallerISRFSR_7TeV-madgraph-tauola/Fall10-START38_V12-v1/GEN-SIM-RECO
 #datasetpath = /TTJets_TuneD6T_largerISRFSR_7TeV-madgraph-tauola/Fall10-START38_V12-v2/GEN-SIM-RECO
 
@@ -115,11 +117,7 @@ datasetpath = /SingleElectron/Run2011A-PromptReco-v1/AOD
 #pset = copyAll.py
 
 #pset = SingleTopMC_PF2PAT_cfg.py
-#pset = SingleTopData_VanillaPF_cfg.py
-#pset = SingleTopData_PF2PAT_cfg.py
-pset = SingleTopData_PF2PAT_New_cfg.py
-#pset = SingleTopMC_PF2PAT_New_cfg.py
-#pset = SingleTopMCForCrab.py
+pset = SingleTopData_PF2PAT_cfg.py
 
 #total_number_of_events= -1
 #total_number_of_events = 1000
@@ -128,8 +126,7 @@ pset = SingleTopData_PF2PAT_New_cfg.py
 #events_per_job = 1000
 #events_per_job = 80000
 
-
-output_file = edmntuple_Data.root
+output_file = edmntuple_DataEle_v1.root
 
 #use_parent = 1
 
@@ -137,41 +134,18 @@ output_file = edmntuple_Data.root
 copy_data = 1
 #ui_working_dir = QCDEMEnriched_Pt_80_170Ele
 #ui_working_dir = DataEle_132440_140040
-ui_working_dir = _DataEle
+ui_working_dir = _DataEle_v1
 #ui_working_dir = DataEle_160433_161312_PF2PAT
-
 
 #storage_element 
 return_data = 0
 #copy_data = 0
 storage_element = srm-cms.cern.ch
 storage_path = /srm/managerv2?SFN=/castor/cern.ch
-#user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/DataPF2PAT/Mu
-#user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/DataPF2PAT/Ele
-#user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/Data/Mu_B
-user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/NewPatTuples/Ele
-#user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/Data/Ele_B
-#user_remote_dir = user/o/oiorio/SingleTop/2011/MC2011/TChannel
-#user_remote_dir = user/o/oiorio/SingleTop/2011/MC2011/TTBarOld
-#user_remote_dir = user/o/oiorio/SingleTop/2011/MC2011/TChannelOld
+#user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/DataMu
+user_remote_dir = user/o/oiorio/SingleTop/2011/Run2011/DataEle
 
-#user_remote_dir = user/o/oiorio/SingleTop/SingleTop_tChan/Ntuples
-#user_remote_dir = user/o/oiorio/SingleTop/TTBar/Ntuples
-#user_remote_dir = user/o/oiorio/SingleTop/SingleTop_sChan/Ntuples
-#user_remote_dir = user/o/oiorio/SingleTop/SingleTop_tWChan/
-#user_remote_dir = user/o/oiorio/SingleTop/SingleTop_WBackground/Ntuples
-#user_remote_dir = user/o/oiorio/SingleTop/QCD/Ntuples
-#user_remote_dir = user/o/oiorio/SingleTop/VQQ/Ntuples
-#user_remote_dir = user/o/oiorio/SingleTop/Wc/Ntuples
-#user_remote_dir = user/o/oiorio/SingleTop/VV/Ntuples
-#user_remote_dir = user/o/oiorio/SingleTop/QCD/
-
-#user_remote_dir = user/o/oiorio/SingleTop/Data/
-#user_remote_dir = user/o/oiorio/SingleTop/Data/Ele
-
-#user_remote_dir = user/o/oiorio/SingleTop/QCD/
-#user_remote_dir = user/o/oiorio/SingleTop/QCDEle/New
-#user_remote_dir = user/o/oiorio/SingleTop/ttbar/Ntuples
+#user_remote_dir = user/o/oiorio/SingleTop/2011/MC2011/DataMu
 
 
 
