Make the multicrab config a bit more user-friendly.

--- a/ElectroWeakAnalysis/MultiBosons/test/Skimming/makeVGammaSkim_multicrab.cfg
+++ b/ElectroWeakAnalysis/MultiBosons/test/Skimming/makeVGammaSkim_multicrab.cfg
@@ -24,55 +24,37 @@ USER.check_user_remote_dir=0
 USER.dbs_url_for_publication=https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
 #USER.publish_data_name=Skim
 
-[MuRun2010A-RRApr21-unmerged] 
+[Mu-Run2010A-RRApr21] 
 CMSSW.datasetpath=/Mu/Run2010A-Apr21ReReco-v1/AOD
-CMSSW.pycfg_params=jobType=MUPHData42X
+CMSSW.pycfg_params=crabOptions=isAOD=True,globalTag=GR_R_42_V14::All,reportEvery=1000,isRealData=True,wantSummary=True,hltProcessName=HLT,print
 CMSSW.lumis_per_job=300
 CMSSW.total_number_of_lumis=-1
-#USER.user_remote_dir=data/414/
-USER.publish_data_name=Run2010A-RRApr21
+USER.publish_data_name=Run2010A-RRApr21-v1
 
-#[MuRun2010B-RRApr21-unmerged] 
-#CMSSW.datasetpath=/Mu/Run2010B-Apr21ReReco-v1/AOD
-#CMSSW.pycfg_params=jobType=MUPHReReco414
-#CMSSW.lumis_per_job=300
-#CMSSW.total_number_of_lumis=-1
-##USER.user_remote_dir=data/414/
-#USER.publish_data_name=Run2010B-RRApr21
+[Mu-Run2010B-RRApr21] 
+CMSSW.datasetpath=/Mu/Run2010B-Apr21ReReco-v1/AOD
+CMSSW.pycfg_params=crabOptions=isAOD=True,globalTag=GR_R_42_V14::All,reportEvery=1000,isRealData=True,wantSummary=True,hltProcessName=HLT,print
+CMSSW.lumis_per_job=300
+CMSSW.total_number_of_lumis=-1
+USER.publish_data_name=Run2010B-RRApr21-v1
 
-#[MuRun2010A-RRDec22-unmerged]
-#CMSSW.datasetpath=/Mu/Run2010A-Dec22ReReco_v1/AOD
-#CMSSW.pycfg_params=jobType=MUPHReReco414
-#CMSSW.lumis_per_job=300
-#CMSSW.total_number_of_lumis=-1
-##USER.user_remote_dir=data/414/
-#USER.publish_data_name=Run2010A-RRDec22
+[SingleMu-Run2011A-RRMay10]
+CMSSW.datasetpath = /SingleMu/Run2011A-May10ReReco-v1/AOD
+CMSSW.pycfg_params=crabOptions=isAOD=True,globalTag=GR_R_42_V14::All,reportEvery=1000,isRealData=True,wantSummary=True,hltProcessName=HLT,print
+CMSSW.lumis_per_job=100
+CMSSW.total_number_of_lumis=-1
+USER.publish_data_name=Run2011A-RRMay10-v1
 
-#[MuRun2010B-RRDec22-unmerged]
-#CMSSW.datasetpath=/Mu/Run2010B-Dec22ReReco_v1/AOD
-#CMSSW.pycfg_params=jobType=MUPHReReco414
-#CMSSW.lumis_per_job=300
-#CMSSW.total_number_of_lumis=-1
-##USER.user_remote_dir=data/414/
-#USER.publish_data_name=Run2010B-RRDec22
-
-#[SingleMuRun2011Av1-unmerged] 
-#CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v1/AOD
-#CMSSW.pycfg_params=jobType=MUPHPromptReco414
-#CMSSW.lumis_per_job=100
-#CMSSW.total_number_of_lumis=-1
-# USER.user_remote_dir=data/414/
-#USER.publish_data_name=Run2011Av1
-
-#[SingleMuRun2011Av2-unmerged] 
-#CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v2/AOD
-#CMSSW.pycfg_params=jobType=MUPHPromptReco414
-##CMSSW.lumis_per_job=100
-#CMSSW.total_number_of_lumis=-1
-# USER.user_remote_dir=data/414
-#USER.publish_data_name=Run2011Av2
+[SingleMu-Run2011Av4]
+CMSSW.datasetpath = /SingleMu/Run2011A-PromptReco-v4/AOD
+CMSSW.pycfg_params=crabOptions=isAOD=True,globalTag=GR_R_42_V14::All,reportEvery=1000,isRealData=True,wantSummary=True,hltProcessName=HLT,print
+CMSSW.lumis_per_job=100
+CMSSW.total_number_of_lumis=-1
+USER.publish_data_name=Run2011A-PRV4-v1
+CMSSW.runselection=165071-165103
 
 ## MC Samples (below are 2010 production, mostly summer)
+#skimType=MuonPhoton,isAOD=True,globalTag=START311_V2A::All,reportEvery=100,isRealData=False,wantSummary=True,hltProcessName=REDIGI311X,print
 #[Zgamma]
 #CMSSW.datasetpath=/Zgamma/Spring10-START3X_V26_S09-v1/GEN-SIM-RECO
 #CMSSW.pycfg_params=jobType=MUPHMC36XSpring10
