--- a/ElectroWeakAnalysis/MultiBosons/test/ntuplize_crab.cfg
+++ b/ElectroWeakAnalysis/MultiBosons/test/ntuplize_crab.cfg
@@ -1,20 +1,25 @@
 [CRAB]
 jobtype = cmssw
-#use_server = 0
+use_server = 0
 #scheduler = glite
-#scheduler = condor
+scheduler = condor_g
 
 [CMSSW]
 pset = VgNtuplizer_cfg.py
 
-datasetpath=/TTbarJets_Tauola-madgraph/Summer10-START36_V9_S09-v1/GEN-SIM-RECO
-#total_number_of_events=-1
+datasetpath=/Mu/lgray-Run2010A-RRDec22-v1-e1d9c80e015666f76e1af789462cb36a/USER
+lumi_mask=lumi.json
+number_of_jobs=1
+total_number_of_lumis=-1
+dbs_url=http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
 #number_of_jobs=100
 
+pycfg_params=
+
 ### Splitting parameters
-#total_number_of_events=-1
+#total_number_of_lumis=-1
 #events_per_job = 50000
-#number_of_jobs = 25
+#number_of_jobs = 1
 
 ### The output files (comma separated list)
 get_edm_output = 1
@@ -22,18 +27,17 @@ get_edm_output = 1
 [USER]
 return_data = 0
 copy_data = 1
-storage_element = t3-srm.ultralight.org
+storage_element = T2_US_Wisconsin
 #storage_path = /srm/v2/server?SFN=/mnt/hadoop
-#user_remote_dir = /store/user/veverka/VGammaSkims_v3/DimuonSkim/test/TTbarJets_Tauola-madgraph
-
+user_remote_dir = VGammaTuples_16052011/MuonPhoton
 
 # storage_element=srm-cms.cern.ch
 # storage_path=/srm/managerv2?SFN=/castor/cern.ch/user/v/veverka
 # user_remote_dir=VGammaSkims_v3/DimuonSkim/TTbarJets_Tauola-madgraph
 
-[GRID]
-rb = CERN
-retry_count=10
+#[GRID]
+#rb = CERN
+retry_count=20
 
 
-[CONDORG]
+#[CONDORG]
