--- a/ElectroWeakAnalysis/MultiBosons/test/ntuplize_multicrab.cfg
+++ b/ElectroWeakAnalysis/MultiBosons/test/ntuplize_multicrab.cfg
@@ -3,7 +3,6 @@ cfg = ntuplize_crab.cfg
 
 [COMMON]
 CRAB.jobtype=cmssw
-#CRAB.scheduler=glite
 CRAB.scheduler=condor_g 
 CRAB.use_server=0
 
@@ -13,26 +12,39 @@ USER.return_data = 0
 USER.copy_data = 1
 ## CASTOR
 USER.storage_element=T2_US_Wisconsin
-#USER.storage_path=/srm/managerv2?SFN=/castor/cern.ch/user/l/lgray/
-#USER.user_remote_dir=VGammaSkims_v3/MuonPhoton
-## T3-SUSY
-#USER.storage_element = t3-srm.ultralight.org
-#USER.storage_path = /srm/v2/server?SFN=/mnt/hadoop
-#USER.user_remote_dir = /store/user/veverka/VGammaSkims_v3/DimuonSkim/test
+#USER.user_remote_dir=VGammaTuples_16052011/MuonPhoton
 
 #set inital retry count to 10, to eliminate hassle
 GRID.retry_count=20
 
-[Sept17ReReco-Muons-nTuple] ## Runs 135821 - 144114
-CMSSW.datasetpath=/Mu/lgray-MuonPhotonVGammaSkim-Sept17ReReco-f81f6ec801d687f509099b4fa4a3c90c/USER
-CMSSW.lumi_mask=/scratch/lgray/Cert_132440-149442_7TeV_StreamExpress_Collisions10_JSON.txt
+[MuRun2010A-Dec22RR-tuple] 
+CMSSW.datasetpath=/Mu/lgray-Run2010A-RRDec22-v1-e1d9c80e015666f76e1af789462cb36a/USER
+CMSSW.lumi_mask=lumi.json
 CMSSW.number_of_jobs=1
 CMSSW.total_number_of_lumis=-1
-CMSSW.dbs_url=http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_01/servlet/DBSServlet
+#USER.user_remote_dir=MuRun2010A-RRDec22
+CMSSW.dbs_url=http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
 
-[PromptRecov2-Muons-nTuple] ## Runs 146240-147225
-CMSSW.datasetpath=/Mu/lgray-MuonPhotonVGammaSkim-PromptRecov2-f81f6ec801d687f509099b4fa4a3c90c/USER
-CMSSW.lumi_mask=/scratch/lgray/Cert_132440-149442_7TeV_StreamExpress_Collisions10_JSON.txt
+[MuRun2010B-Dec22RR-tuple] 
+CMSSW.datasetpath=/Mu/lgray-Run2010B-RRDec22-v1-e1d9c80e015666f76e1af789462cb36a/USER
+CMSSW.lumi_mask=lumi.json
 CMSSW.number_of_jobs=1
 CMSSW.total_number_of_lumis=-1
-CMSSW.dbs_url=http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_01/servlet/DBSServlet
+#USER.user_remote_dir=MuRun2010B-RRDec22
+CMSSW.dbs_url=http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
+
+[MuRun2011A-PromptReco-v1-tuple]
+CMSSW.datasetpath=/SingleMu/lgray-Run2011A-v1-e1d9c80e015666f76e1af789462cb36a/USER
+CMSSW.lumi_mask=lumi.json
+CMSSW.number_of_jobs=1
+CMSSW.total_number_of_lumis=-1
+#USER.user_remote_dir=MuRun2011-v1
+CMSSW.dbs_url=http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
+
+[MuRun2011A-PromptReco-v2-tuple]
+CMSSW.datasetpath=/SingleMu/lgray-Run2011A-v2-e1d9c80e015666f76e1af789462cb36a/USER
+CMSSW.lumi_mask=lumi.json
+CMSSW.number_of_jobs=1
+CMSSW.total_number_of_lumis=-1
+#USER.user_remote_dir=MuRun2011-v2
+CMSSW.dbs_url=http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
