--- a/ElectroWeakAnalysis/MultiBosons/test/ntuplize_multicrab.cfg
+++ b/ElectroWeakAnalysis/MultiBosons/test/ntuplize_multicrab.cfg
@@ -17,33 +17,33 @@ USER.storage_element=T2_US_Wisconsin
 #set inital retry count to 10, to eliminate hassle
 GRID.retry_count=20
 
-[MuRun2010A-Dec22RR-tuple] 
-CMSSW.datasetpath=/Mu/lgray-Run2010A-RRDec22-v1-e1d9c80e015666f76e1af789462cb36a/USER
-CMSSW.lumi_mask=lumi.json
+[MuRun2010A-RRApr21-tuple-42X-v2] 
+CMSSW.datasetpath=/Mu/lgray-Run2010A-RRApr21-42X-v2-f1c3aea799451450bbb7732cb714d91d/USER
+CMSSW.lumi_mask=/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions10/7TeV/Reprocessing/Cert_136033-149442_7TeV_Apr21ReReco_Collisions10_JSON.txt
 CMSSW.number_of_jobs=1
 CMSSW.total_number_of_lumis=-1
 #USER.user_remote_dir=MuRun2010A-RRDec22
 CMSSW.dbs_url=http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
 
-[MuRun2010B-Dec22RR-tuple] 
-CMSSW.datasetpath=/Mu/lgray-Run2010B-RRDec22-v1-e1d9c80e015666f76e1af789462cb36a/USER
-CMSSW.lumi_mask=lumi.json
+[MuRun2010B-RRApr21-tuple-42X-v2] 
+CMSSW.datasetpath=/Mu/lgray-Run2010B-RRApr21-42X-v2-f1c3aea799451450bbb7732cb714d91d/USER
+CMSSW.lumi_mask=/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions10/7TeV/Reprocessing/Cert_136033-149442_7TeV_Apr21ReReco_Collisions10_JSON.txt
 CMSSW.number_of_jobs=1
 CMSSW.total_number_of_lumis=-1
 #USER.user_remote_dir=MuRun2010B-RRDec22
 CMSSW.dbs_url=http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
 
-[MuRun2011A-PromptReco-v1-tuple]
-CMSSW.datasetpath=/SingleMu/lgray-Run2011A-v1-e1d9c80e015666f76e1af789462cb36a/USER
-CMSSW.lumi_mask=lumi.json
-CMSSW.number_of_jobs=1
+[MuRun2011A-RRMay10-v1-42X-v2]
+CMSSW.datasetpath=/SingleMu/lgray-Run2011A-RRMay10-42X-v2-f1c3aea799451450bbb7732cb714d91d/USER
+CMSSW.lumi_mask=/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions11/7TeV/Reprocessing/Cert_160404-163869_7TeV_May10ReReco_Collisions11_JSON.txt
+CMSSW.number_of_jobs=25
 CMSSW.total_number_of_lumis=-1
 #USER.user_remote_dir=MuRun2011-v1
 CMSSW.dbs_url=http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
 
-[MuRun2011A-PromptReco-v2-tuple]
-CMSSW.datasetpath=/SingleMu/lgray-Run2011A-v2-e1d9c80e015666f76e1af789462cb36a/USER
-CMSSW.lumi_mask=lumi.json
+[MuRun2011A-PromptReco-v4-42X-v2]
+CMSSW.datasetpath=/SingleMu/lgray-Run2011A-PRV4-42X-v2-f1c3aea799451450bbb7732cb714d91d/USER
+CMSSW.lumi_mask=/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions11/7TeV/Prompt/Cert_160404-165121_7TeV_PromptReco_Collisions11_JSON.txt
 CMSSW.number_of_jobs=1
 CMSSW.total_number_of_lumis=-1
 #USER.user_remote_dir=MuRun2011-v2
